--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "auto-electron-workspace",
-  "version": "1.0.3",
+  "name": "Electron-AutoWorkspace",
+  "version": "1.1.0",
   "description": "",
   "main": "app/app.js",
   "scripts": {
