--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "YuJM",
   "license": "ISC",
   "devDependencies": {
+    "gulp": "^3.9.0",
     "del": "^2.1.0",
     "gulp-less": "^3.0.5",
     "gulp-livereload": "^3.8.1",
